# devfest_llmops

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
data/: create_datastore.ipynb  google_devfest_metadata.jsonl
infra/bq/: create_tbl.sql
infra/otlp_collector/: README.md  collector.yml
model/: decrypt.py  qna.py
